crates/filecommand-tui/tests/snapshots/snapshot_views__brief_mode_three_columns.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: text
---
╔═════════ C:\Users\demo\left ═════════╗╔════════ C:\Users\demo\right ═══3:04 PM
║▶UP--DIR◄   f5.txt                    ║║Name↓        │ Size    Date    Time   ║
║f0.txt      f6.txt                    ║║..           │ ▶UP--DI                ║
║f1.txt      f7.txt                    ║║docs         │ ▶SUB-DI 01-02-2 03:0   ║
║f2.txt                                ║║Cargo.toml   │ 612     01-02-2 03:0   ║
║f3.txt                                ║║readme.txt   │ 12K     01-02-2 03:0   ║
║f4.txt                                ║║                                      ║
╚════════════ ..  UP--DIR ═════════════╝╚════════════ ..  UP--DIR ═════════════╝
C:\Users\demo\left>_                                                            
1Help 2Menu 3View 4Edit 5Copy 6RenMov 7Mkdir 8Delete 9PullDn 10Quit
