crates/filecommand-tui/tests/snapshots/snapshot_views__clipboard_feedback_mini_status_error.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: row
---
╚═════ Clipboard busy — try again ═════╝╚════════════ ..  UP--DIR ═════════════╝
