crates/filecommand-tui/tests/snapshots/snapshot_views__clipboard_feedback_mini_status_success.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: row
---
╚════ 3 files copied to clipboard ═════╝╚════════════ ..  UP--DIR ═════════════╝
