crates/filecommand-tui/tests/snapshots/snapshot_views__command_line_history_recall.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: command_line_row(&text)
---
C:\Users\demo\left>type readme.txt_
