crates/filecommand-tui/tests/snapshots/snapshot_views__command_line_with_prompt.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: row
---
C:\Users\demo\left>dir *.txt_
